--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Inter", serif;
   margin: 0;
   background-color: hsl(36, 100%, 99%);
-  padding: 5rem;
+  padding: 2rem 5rem;
 }
 h1,
 h2,
@@ -12,4 +12,10 @@ h5,
 p {
   margin: 0;
   padding: 0;
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: 2rem;
+  }
 }
